<resources>
    <string name="app_name">SGKY - kentät</string>
    <string name="kuvaus">
    </string>
    <string name="name">Name</string>
    <string name="title">Title</string>
    <string name="department">Department</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="image">Employee image</string>
    <string name="katso_kentan_tiedot">Katso kentän kotisivut:</string>
    <string name="linkki">www.kentta.fi</string>
    <string name="sijainti_kartalla">Katso kentän sijainti:</string>
    <string name="kartan_kaynnistys">Näytä sijainti kartalla</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
</resources>