<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:paddingBottom="20dp"
                                             android:layout_height="wrap_content">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_height="wrap_content" android:layout_width="0dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp">
        <ImageView
                android:layout_width="264dp"
                android:layout_height="match_parent" tools:srcCompat="@tools:sample/avatars"
                android:id="@+id/imageView" android:layout_weight="1" android:contentDescription="@string/image"/>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_weight="1">
            <TextView
                    android:text="@string/name"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/nameTextView"/>
            <TextView
                    android:text="@string/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/titleTextView"/>
            <TextView
                    android:text="@string/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/emailTextView"/>
            <TextView
                    android:text="@string/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/phoneTextView"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/kuvausTextView"
                    android:text="@string/kuvaus"/>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>