<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/linearLayout6">
        <android.support.v7.widget.Toolbar

                android:layout_width="match_parent"
                android:layout_height="86dp"

                android:background="@drawable/backdrop"
                android:minHeight="@dimen/abc_action_bar_default_height_material"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/toolbar" app:layout_constraintTop_toTopOf="parent">

            <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textSize="30dp"
                    android:textColor="@android:color/white"
                    android:layout_gravity="center"
                    android:id="@+id/toolbar_titteli" android:text="@string/linkki"/>


        </android.support.v7.widget.Toolbar>
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/linearLayout"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
    >
        <ImageView
                android:layout_width="150dp"
                android:layout_height="100dp" tools:srcCompat="@tools:sample/avatars"
                android:id="@+id/imageView" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:contentDescription="@string/image"/>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/titleTextView"
                    app:layout_constraintTop_toBottomOf="@+id/nameTextView"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"/>
            <TextView
                    android:text="@string/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/emailTextView"

                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"/>
            <TextView
                    android:text="@string/phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/phoneTextView"
                    app:layout_constraintTop_toBottomOf="@+id/emailTextView"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout2"
            tools:layout_editor_absoluteX="0dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout">
        <TextView
                android:text="@string/kuvaus"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/kuvausTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toTopOf="parent"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:id="@+id/linearLayout5"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
    >
        <TextView
                android:text="@string/katso_kentan_tiedot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/katsoKentanTiedot"/>
        <TextView
                android:paddingLeft="10dp"
                android:textColor="@android:color/holo_green_light"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/linkki"/>
        <TextView
                android:text="@string/sijainti_kartalla"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView4"/>
        <TextView

                android:text="@string/kartan_kaynnistys"
                android:paddingLeft="10dp"
                android:textColor="@android:color/holo_green_light"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/kartan_avaus"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout8"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout5">
        <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                app:adSize="BANNER"
                app:adUnitId="ca-app-pub-3940256099942544/6300978111">
        </com.google.android.gms.ads.AdView>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>